--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
 <!-- fontawsome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
-<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
-<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
 
 <!-- local css -->
 <link rel="stylesheet" href="assets/css/customeStyle.css">
@@ -174,6 +174,12 @@
     </div>
   </div>
 
+  <footer>
+    <div class="col-4">
+      <img src="./assets/img/Picture1.png" alt="">
+    </div>
+  </footer>
+
   <!-- external cdn links for scripting files -->
 <!-- bootstrap -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -183,30 +189,29 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 <script src="./assets/js/"></script>
 <script src="./assets/js/custome.js"></script>
-
-<script src="jquery.min.js"></script>
-<script src="owlcarousel/owl.carousel.min.js"></script>
+<script src="./assets/js/owl.carousel.min.js"></script>
 
 <script>
     $(document).ready(function(){
-      $(".owl-carousel").owlCarousel();
-    });
+    $(".owl-carousel").owlCarousel();
+  });
 
-    var owl = $('.owl-carousel');
-    owl.owlCarousel({
-        items:4,
-        loop:true,
-        margin:10,
-        autoplay:true,
-        autoplayTimeout:1000,
-        autoplayHoverPause:true
-    });
-    $('.play').on('click',function(){
-        owl.trigger('play.owl.autoplay',[1000])
-    })
-    $('.stop').on('click',function(){
-        owl.trigger('stop.owl.autoplay')
-    })
+  var owl = $('.owl-carousel');
+  owl.owlCarousel({
+      items:4,
+      loop:true,
+      margin:10,
+      autoplay:true,
+      // autoplay: 2000, // time for slides changes
+      autoplayTimeout:3000,
+      autoplayHoverPause:true
+  });
+  $('.play').on('click',function(){
+      owl.trigger('play.owl.autoplay',[3000])
+  })
+  $('.stop').on('click',function(){
+      owl.trigger('stop.owl.autoplay')
+  })
 </script>
 
 </body>
