--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
   
   <!-- Header Area Start -->
   <header>
-    <div class="bgSlider">
+    <div class="bgSlider" id="top">
       <div class="bgLyr">
 
         <div class="logo">
@@ -175,11 +175,14 @@
   </div>
 
   <footer>
-    <div class="col-4">
+    <div class="col-4 footerDiv">
       <img src="./assets/img/Picture1.png" alt="">
     </div>
   </footer>
 
+  <div class="scrollUp scrolling">
+    <a href="#top"><i class="fas fa-angle-up"></i></a>
+  </div>
   <!-- external cdn links for scripting files -->
 <!-- bootstrap -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
