--- a/aboutus.html
+++ b/aboutus.html
@@ -2,63 +2,145 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Abouts Us</title>
+<title>AHD INDIA</title>
+
+<!-- external cdn links for styling -->
+<!-- bootstrap -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- animate css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+<!-- fontawsome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
+<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
+
+<!-- local css -->
+<link rel="stylesheet" href="assets/css/customeStyle.css">
+<link rel="stylesheet" href="assets/css/header.css">
+<link rel="stylesheet" href="assets/css/responsive.css">
+
 </head>
 
 <body>
+  <!-- header stip -->
+  <div class="socialMedia col-12">
+    <a href="" class="topIconLink"><i class="far fa-envelope topIcon" title="Send Us A Mail"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-map-marker-alt topIcon" title="Find Us Here"></i></a>
+    <a href="" class="topIconLink"><i class="fas fa-phone-alt topIcon" title="Call Us"></i></a>
+  </div>
+  <div style="background-color: darkcyan;" class="mainDiv aboutSticky col-12">
+    <div class="navDIv col-12 float-right">
+      <!-- Classy Menu -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand stickyLogo" href="#"><img style="width: 20%;" src="./assets/img/logo.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Contact_Us.html">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <!-- header stip -->
 
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" border="0">
-    <tr>
-      <td width="40%"><a href="home.html"><img src="logo.png" width="200" height="100" /></a></td>
-      <td width="60%" height="30%"><div align="left"><font size="+3"><a href="home.html">AHD INDIA</a></td>
-    </tr></table>
-  <table align="right" width="40%" height="44" border="0" widht=100%>
-  	<tr>
-      <td width="18%" height="40"><div align="right">
-      <a href="home.html">Home</a></td>
-      <td width="18%"><div align="right">
-      <a href="about us.html">About Us</a></td>
-      <td width="18%"><div align="right">
-      <a href="ServicesAm.html">Services</a></td>
-      <td width="18%"><div align="right">
-      <a href="projects.html">Projects</a></td>
-      <td width="18%"><a href="Contact_Us.html"><a href="Contact_US.html">
-        <div align="right">
-      <a href="Contact_Us.html">Contact Us</a></td>
-      <td width="8%"></td>
-    </tr>
-  </table><br /><br />
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <td height="20"><font size="+2">Welcome to AHD Enterprises, India. This is running line</td>
-    </tr>
-  </table>
-</form>
+  <!-- about us -->
+  <div class="nextSections" id="aboutUs">
+    <div class="container">
+      <div class="headerText text-center pb-5">
+        <h4><u>About Us</u></h4>
+      </div>
+      <div class="pt-5">
+        <div class="col-6 col-xs-12 float-left">
+          <div class="headerText">
+            <h4>Welcome to AHD Enterprises, India.</h4>
+          </div>
+          <div class="bodyText">
+            <h6>
+              AHD India is the young and dynamic entrant into the space of manufacturing Passenger Boarding Bridge Canopy with the vision to provide high quality products. AHD India was established by his Director Mr. Amit Malhotra in year 2015 with the prospect to build canopies for Passenger Boarding Bridge.
+            </h6>
+            <p>Know More About Us....</p>
+            <!-- <a href="./aboutus.html" class="readBtn">Read More</a> -->
+          </div>
+        </div>
+        <div class="col-6 col-xs-12 float-left" style="height: 18em;overflow: hidden;;">
+          <div id="slider">
+            <figure>
+              <img src="./assets/img/canopy1.jpg" alt>
+              <img src="./assets/img/canopy2.jpg" alt>
+              <img src="./assets/img/canopy3.jpg" alt>
+              <img src="./assets/img/canopy4.jpg" alt>
+              <img src="./assets/img/canopy6.png" alt>
+            </figure>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <td colspan="2"><h1>ABOUT US</h1></td>
-    </tr>
-    <tr>
-      <td width="50%" align="justify"><font size="+2"><p>AHD India has the specialization in the domain of manufacturing  Passenger Boarding Bridge with the prospect to satisfy the continuing needs and expectations of clients,  while complying with the agreed standards and specifications.      
-      <p> Mr. Amit Malhotra has a vision to get pioneer in Technologies, Solution &amp; Services.       
-      <p>AHD INDIA is doing projects  under Make in India concept by Indian Government. Their vision is to develop  product which we were importing from other countries in India.</td>
-      <td width="50%"><div align="center"><img src="canopy1.jpg" width="90%" height="350" /></td>
-    </tr>
-  </table>
-</form>
-<form id="form1" name="form1" method="post" action="">
-  <table width="90%" align="center" border="0">
-    <tr>
-      <th width="25%" height="33" scope="row"><a href="mailto:amitkumar2234@gmail.com">Email Us </a></th>
-      <th width="45%" scope="row"><a href="home.html">Home</a></th>
-      <th width="25%" scope="row"><a href="Contact_US.html">Contact Us</a></th>
-    </tr>
-  </table>
-</form>
+ 
+  <footer>
+    <div class="col-4  footerNav">
+      <a href="./index.html">HOME</a>
+    </div>
+    <div class="col-4 footerNav">
+      <a href="href://mailto:amitkumar2234@gmail.com">SEND A MAIL</a>
+    </div>
+    <div class="col-4  footerNav">
+      <a href="./Contact_Us.html">CONTACT US</a>
+    </div>
+  </footer>
+  
+  <div class="scrollUp scrolling">
+    <a href="#top"><i class="fas fa-angle-up"></i></a>
+  </div>
+  <!-- external cdn links for scripting files -->
+<!-- bootstrap -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!-- fontawsome -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+<script src="./assets/js/"></script>
+<script src="./assets/js/custome.js"></script>
+<script src="./assets/js/owl.carousel.min.js"></script>
+
+<script>
+    $(document).ready(function(){
+    $(".owl-carousel").owlCarousel();
+  });
+
+  var owl = $('.owl-carousel');
+  owl.owlCarousel({
+      items:4,
+      loop:true,
+      margin:10,
+      autoplay:true,
+      // autoplay: 2000, // time for slides changes
+      autoplayTimeout:3000,
+      autoplayHoverPause:true
+  });
+  $('.play').on('click',function(){
+      owl.trigger('play.owl.autoplay',[3000])
+  })
+  $('.stop').on('click',function(){
+      owl.trigger('stop.owl.autoplay')
+  })
+</script>
+
 </body>
 </html>
